--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ConnectPyse"
+name = "ConnectPyse-Manage"
 version = "0.0.1"
 description = "A Python toolkit for the ConnectWise Manage API with full type support"
 readme = "README.md"
@@ -58,6 +58,7 @@ Issues = "https://github.com/Ruderali/ConnectPyse/issues"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+license-files = []
 
 [tool.setuptools.packages.find]
 where = ["src"]
